syntax="proto3";

option go_package="grpc-server/pb";

import "enum.proto";
import "google/protobuf/timestamp.proto";

message Employee {
    int32 id=1;
    int32 no=2;
    string firstName=3;
    string lastName=4;
    // float salary=5;

    MonthSalary monthSalary=6;
    EmployeeStatus status=7;
    google.protobuf.Timestamp lastModfied=8;

    reserved 5; 
    reserved "salary";
}

message MonthSalary {
    float basic=1;
    float bouns=2;
}

message GetByNoRequest {
    int32 no=1;
}

message EmployeeResponse {
    Employee employee=1;
}

message GetAllRequest {

}

message AddPhotoRequest {
    bytes data=1;
}

message AddPhotoReponse {
    bool ok=1;
}

message EmpolyeeRequest {
    Employee employee=1; 
}

service EmployeeService {
    rpc GetByNo (GetByNoRequest) returns (EmployeeResponse);
    rpc GetAll (GetAllRequest) returns (stream EmployeeResponse);
    rpc AddPhoto (stream AddPhotoRequest) returns (AddPhotoReponse);
    rpc Save (EmpolyeeRequest) returns (EmployeeResponse);
    rpc SaveAll (stream EmpolyeeRequest) returns (stream EmployeeResponse);
}